Adicionando imagem para celular

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <h1 id="titulo">Previsão do Tempo</h1>
         <label for="">
-            <input id="cidade" type="text" placeholder="Digite o nome da cidade" title="Preencha nesse estilo: cidade-uf" oninvalid="this.setCustomValidity('Insira a cidade')" oninput="this.setCustomValidity('')">
+            <input id="cidade" type="text" placeholder="Belo Horizonte-MG" title="Preencha nesse estilo: cidade-uf" oninvalid="this.setCustomValidity('Insira a cidade')" oninput="this.setCustomValidity('')">
             <button id="botao">Buscar</button>
         </label>
     </header>
